# MyFinance

./: CHANGELOG.md  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml  requirements.txt
Src/: DATA.json  MyFinance_V1.0.py  main.py
Src/myfinance/: app.py  config.py  main.py  storage.py
Src/myfinance/Assets/: DATA.json
docs/: index.html  style.css
